add comments in style.css

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,12 @@
-/* Reset */
+
+
+
+/* 
+  Zerodha Landing Page Clone
+  Author: Dheraj 
+  Purpose: HTML/CSS practice & responsive UI design
+*/
+
 * {
   margin: 0;
   padding: 0;
